--- a/incl/main/linear_optimeringsproblemer/dualitet.tex
+++ b/incl/main/linear_optimeringsproblemer/dualitet.tex
@@ -1,7 +1,7 @@
 \section{Dualitet}
 % God arbejdslyst 
 %vi kan vælge at tage det med lagrange multiplier med også men tænker vi snakker om det jeg er personligt i tvivl og ville nødigt spilde tiden på det.
-
+%Jeg er iøvrigt bange for jeg er kommet til at skyde mig selv i foden, men umiddelbart giver det mening for mig, det snakker vi om.
 
 Et vigtigt element af teorien vedrørende liniære optimerings problemer og simplex metodens brug, omhandler \textit{dualproblemer}.
 
@@ -30,9 +30,9 @@ Vil således have:
 \begin{align*}
 \begin{array}{lrll}
 \text{minimer}		&\textbf{p}^T\textbf{b}	&			&\\
-\text{begrænset af}	&p_i					&\geq 0,	&j \in M_1,\\
-					&p_i					&\leq 0,	&j \in M_2,\\
-					&p_i					&\text{fri},	&j \in M_3,\\
+\text{begrænset af}	&p_i					&\geq 0,	&i \in M_1,\\
+					&p_i					&\leq 0,	&i \in M_2,\\
+					&p_i					&\text{fri},	&i \in M_3,\\
 					&\textbf{p}^T\textbf{A}_j	&\leq c_j,	&j \in N_1,\\
 					&\textbf{p}^T\textbf{A}_j	&\geq c_j,	&j \in N_2,\\
 					&\textbf{p}^T\textbf{A}_j	& = b_i,	&i \in N_3,
@@ -59,14 +59,118 @@ Begræsninger & $\leq c_j$ & $\geq 0$   & Variable     \\
 \end{tabular}
 \end{center}
 \end{table}
+\noindent
+Dual problemet kan således opstilles som følger:
+\begin{eks}
+Betragt diæt problemet fra afsnittet om simplexmetoden:
+\begin{align*}
+\begin{array}{lrrlr}
+\text{Maksimer}		&	\multicolumn{2}{c}{z=5x_1+4x_2}  &\\
+\text{begrænset af}	&3x_1& +5x_2			&\leq 	&78,\\
+					&4x_1& + x_2				&\leq	& 36,\\
+					&x_1& , x_2				&\geq	& 0.
+\end{array}
+\end{align*}
+\\
+Dualproblemet vil således have denne form:
+%hvilket bogstave foretrækker i istedet for z? hvis i vil ha z i standard notationen
+\begin{align*}
+\begin{array}{lrrlr}
+\text{Minimer}		&	\multicolumn{2}{c}{z=78p_1+36_p2}  &\\
+\text{begrænset af}	&3p_1& +4p_2			&\geq 	&5,\\
+					&5p_1& + p_2				&\geq	& 4,\\
+					&p_1& , p_2				&\geq	& 0.
+\end{array}
+\end{align*}
+Hvor problemet her istedet er at minimere indholdet af sukker og kulhydrater begrænset af ?? 
+%?? Julie skal have lidt mere forklaring af dine begrænsninger for at komme i mål her.
 
-%s 143 bertsimas
+Løses dette ved hjælp af simplex-algoritmen opnåes følgende tabel:
+\begin{align*}
+\begin{blockarray}{cccccc}
+p_1 & p_2 & \textcolor{blue}{s_1} & \textcolor{blue}{s_2} & z & b \\
+\begin{block}{[cc|ccc|c]}
+3 & 4 & 1 & 0 & 0 & 5 \\
+5 & 1 & 0 & 1 & 0 & 4 \\
+\cline{1-6}
+78 & 36 & 0 & 0 & 1 & 0\\
+\end{block}
+\end{blockarray}
+\end{align*}
+%skal have lidt hjælp til at omskrive problemet til standardform simplex(det er bare fortegn jeg er i tvivl om, har et program der udføre algoritmen, så er good to go bagefter)
 
+%her skal løst simplex smides ind
 
-%Transponering af simplex til at finde dualproblem som eksempel
-%Slack variable sætningen.
+Som det fremgår findes minimum i samme punkt:
+$z=78$ hvor $p_1$ og $p_2$ slackvariable $s_1=6$ og $s_2=12$
 
-%dualitetssætningen
+\end{eks}
+Som det fremgår i eksemplet har løsningen på dualproblemet samme optimale løsning, hvor slackvariable her er løsningen på det oprindelige problem.
+Det gælder endvidere at der fra dualproblemet kan vendes tilbage til det oprindlige problem hvilket udtrykkes ved følgende sætning:
+\begin{thm}{}{dualitetsaet}
+Hvis dualproblemet omdannes til et ækvivalent minimumsproblem og dualproblemet af dette dannes, opnåes det oprindlige problem.
+\end{thm}
+\begin{proof}
+Betragt problemet:
+\begin{align*}
+\begin{array}{lrll}
+\text{minimer}		&\textbf{p}^T\textbf{b}	&			&\\
+\text{begrænset af}	&p_i					&\geq 0,	&i \in M_1,\\
+					&p_i					&\leq 0,	&i \in M_2,\\
+					&p_i					&\text{fri},	&i \in M_3,\\
+					&\textbf{p}^T\textbf{A}_j	&\leq c_j,	&j \in N_1,\\
+					&\textbf{p}^T\textbf{A}_j	&\geq c_j,	&j \in N_2,\\
+					&\textbf{p}^T\textbf{A}_j	& = b_i,	&i \in N_3,
+\end{array}
+\end{align*}
+og dets dualproblem:
+\begin{align*}
+\begin{array}{lrll}
+\text{Maksimér}		&\textbf{c}^T\textbf{x}	&			&\\
+\text{begrænset af}	&\textbf{a}_i^T\textbf{x}	&\geq b_i,	&i \in M_1,\\
+					&\textbf{a}_i^T\textbf{x}	&\leq b_i,	&i \in M_2,\\
+					&\textbf{a}_i^T\textbf{x}	& = b_i,	&i \in M_3,\\
+					&x_j					&\geq 0,	&j \in N_1,\\
+					&x_j					&\leq 0,	&j \in N_2,\\							&x_j					&\text{fri},	&j \in N_3,
+\end{array}
+\end{align*}
+Dualproblemet omdannes til et ækvivalent minimumsproblem:
+\begin{align*}
+\begin{array}{lrll}
+\text{minimer}		&-\textbf{c}^T\textbf{x}	&			&\\
+\text{begrænset af}	&-\textbf{a}_i^T\textbf{x}	&\leq -b_i,	&i \in M_1,\\
+					&-\textbf{a}_i^T\textbf{x}	&\geq -b_i,	&i \in M_2,\\
+					&-\textbf{a}_i^T\textbf{x}	& = -b_i,	&i \in M_3,\\
+					&x_j					&\geq 0,	&j \in N_1,\\
+					&x_j					&\leq 0,	&j \in N_2,\\							&x_j					&\text{fri},	&j \in N_3,
+\end{array}
+\end{align*}
+Dualen til dette problem findes nu:
+\begin{align*}
+\begin{array}{lrll}
+\text{maksimer}		&-\textbf{p}^T\textbf{b}	&			&\\
+\text{begrænset af}	&p_i					&\geq 0,	&i \in M_1,\\
+					&p_i					&\leq 0,	&i \in M_2,\\
+					&p_i					&\text{fri},	&i \in M_3,\\
+					&-\textbf{p}^T\textbf{A}_j	&\geq -c_j,	&j \in N_1,\\
+					&-\textbf{p}^T\textbf{A}_j	&\leq -c_j,	&j \in N_2,\\
+					&-\textbf{p}^T\textbf{A}_j	& = -b_i,	&i \in N_3,
+\end{array}
+\end{align*}
+Hvilket har et ækvivalent minimumsproblem:
+\begin{align*}
+\begin{array}{lrll}
+\text{minimer}		&\textbf{p}^T\textbf{b}	&			&\\
+\text{begrænset af}	&p_i					&\geq 0,	&i \in M_1,\\
+					&p_i					&\leq 0,	&i \in M_2,\\
+					&p_i					&\text{fri},	&i \in M_3,\\
+					&\textbf{p}^T\textbf{A}_j	&\leq c_j,	&j \in N_1,\\
+					&\textbf{p}^T\textbf{A}_j	&\geq c_j,	&j \in N_2,\\
+					&\textbf{p}^T\textbf{A}_j	& = b_i,	&i \in N_3,
+\end{array}
+\end{align*}
+\end{proof}
+
 
 
 
