--- a/incl/main/simplex_metoden/pivoterings_lokke.tex
+++ b/incl/main/simplex_metoden/pivoterings_lokke.tex
@@ -1,2 +1,58 @@
 \section{Pivoterings-løkker}
-% he
+ Der er en risiko for ved degenererede basale løsninger, at simplex metoden blot skifter variabler ind og ud af basis, sådan at den sidder fast i en uendelig løkke.  
+For at garantere at simplex metoden stopper ved en optimal værdi, og ikke fortsætter med at pivotere uendeligt, så kan der indføres forskellige regler for hvilken variabel som skal komme ind i løsningen.
+
+\subsection{lexicografi}
+%ingen ide om det hedder lexicografi på dansk men skiver det indtil videre
+
+Før den \textit{lexicografiske} metode at vælge pivot søjler på introduceres, så er det nødvendigt at definere lexicografi
+\begin{defn}{}{}
+En vektor $\textbf{u}\in \R^n$ er \textbf{lexicografisk større}, eller mindre end en vektor $\textbf{v}\in \R^n$, hvis $\textbf{v} \neq \textbf{u}$ og den første ikke-nul indgang i $\textbf{u}-\textbf{v}$ er henholdsvis positiv eller negativ.
+\end{defn}
+\noindent
+Et eksempel på lexicografi ses i eksempel \ref{eks:lexi}
+
+\begin{eks}\label{eks:lexi}
+Givet vektorerne
+$$\textbf{u}=
+\begin{bmatrix}
+2\\
+3\\
+1\\
+\end{bmatrix}
+,
+\textbf{v}=
+\begin{bmatrix}
+2\\
+1\\
+2\\
+\end{bmatrix}
+\text{ og }
+\textbf{z}=
+\begin{bmatrix}
+3\\
+2\\
+2\\
+\end{bmatrix}
+.$$
+Så er $\textbf{u}$ lexicofrafisk større end $\textbf{v}$ da den første ikke-nul værdi af $\textbf{u}-\textbf{v}$ er 2.
+$\textbf{u}$ er til gengæld lexicografisk mindre end $\textbf{z}$ da den første ikke-nul værdi er $-1$
+\end{eks}
+En lexicografisk metode at vælge hvilke rækker der skal pivoteres følger.
+\begin{enumerate}
+\item Vælg en arbitrær søjle $\textbf{A}_j$, til at indgå i basis, så længe dens reducererde pris $c_j$ er negativ.
+Lad $\textbf{u}$ være den $j$'te søjle af tabulaen.
+\item For hvert i med $u_i>0$ divideres den i'te række med $u_i$, og vælg den lexicografikske mindste række. Hvis rækken $L$ er den lexicografiske mindste række så forlader den $L$'te basiske variabel $x_B(L)$ basiset.
+\end{enumerate}
+Det følger at enhver valg af pivotering ved den lexicografiske metode er unik, da der ellers ville gælde at der var en anden række som var proportional med den valgte række. Dette er i strid med antagelsen om at rækkerne er lineært uafhængige, hvilket er bevist er tilfældet.
+
+
+%Der er en sætning som jeg nok skal lave, men jeg har bare brug for at diskutere med nogen hvad det vil sige at noget er lexigrafisk positiv
+
+%Jeg tror ikke Bland's regel er relevant for os medmindre at vi skriver om den revidererde simpelx metode.
+%\subsection{Bland's regel}
+%En anden metode
+%
+%
+%
+%
