--- a/incl/main/grafisk_losning/degenerering.tex
+++ b/incl/main/grafisk_losning/degenerering.tex
@@ -1,6 +1,6 @@
 \section{Degenerering}
 % idonnotknow
-Fra definition \ref{defn:basal} fremkommer det, at der skal være $n$ aktive betingelser, for at $\mathbf{x}$ er en basal løsning. 
+Af definition \ref{defn:basal} fremgår det, at der skal være $n$ aktive betingelser, for at $\mathbf{x}$ er en basal løsning. 
 Nedenfor defineres tilfælde, hvor der er flere end $n$ aktive betingelser. 
 %
 \begin{defn}{}{}
