--- a/incl/main/grafisk_losning/eksistens.tex
+++ b/incl/main/grafisk_losning/eksistens.tex
@@ -11,7 +11,7 @@ Et polyeder $\mathcal{P} \in \R^n$ indeholder en \textbf{uendelig linje}, hvis d
 Af denne definition kommer følgende sætning.
 %
 \begin{thm}{}{ekstremums1}
-Lad $\mathcal{P} = \{\textbf{x} \in \R^n \mid \textbf{a}_i^T\textbf{x} \geq b_i, i = 1,2,\ldots,m  \}$ være et ikke-tomt polyeder.
+Lad $\mathcal{P} = \{\textbf{x} \in \R^n \mid \textbf{a}_i^T\textbf{x} \geq b_i, i = 1,2,\ldots,m  \}$ være et ikke-tomt polyeder, der ikke er på standard form.
 Så er følgende udsagn ækvivalente.
 %
 \begin{enumerate}[label = (\alph*)]
@@ -28,7 +28,7 @@ Hvis dette ikke er tilfældet, ligger alle vektorerne $\textbf{a}_i, i \in I$, i
 Betragt linjen bestående af alle punkter på formen $\textbf{y} = \textbf{x} + \lambda \textbf{d}$, hvor $\lambda$ er en vilkårlig skalar.
 For $i \in I$ haves, at $\textbf{a}_i^T\textbf{y} = \textbf{a}_i^T\textbf{x} + \lambda \textbf{a}_i^T\textbf{d} = \textbf{a}_i^T\textbf{x} = b_i$.
 De betingelser, der er bindende i $\textbf{x}$, er således også bindende i alle punkter på linjen.
-Antages det, at $\mathcal{P}$ ikke indeholder en uendelig linje, må der eksistrer et $\lambda$, hvor en af betingelser ikke længere er opfyldt.
+Antages det, at $\mathcal{P}$ ikke indeholder en uendelig linje, må der eksistre et $\lambda$, hvor en af betingelserne ikke længere er opfyldt.
 I punktet, hvor betingelsen er ved at blive brudt, må en ny betingelse blive bindende.
 Derfor må der eksistere et $\lambda_j$ og et $j \notin I$, således at $\textbf{a}_j^T (\textbf{x} + \lambda_j\textbf{d}) = b_j$.\\\\
 %
@@ -52,7 +52,7 @@ Da vektorerne $\textbf{a}_i, i = 1, 2, \ldots, n,$ er lineært uafhængige, medf
 Dette giver en modstrid og derfor må (c) $\rightarrow$ (b).
 \end{proof}\\
 %
-Bemærk, at begrænsede polyeder ikke indeholder en uendelig linje.
+Bemærk, at begrænsede polyedre ikke indeholder en uendelig linje.
 Ligeledes indeholder den positive kvadrant $\{ \textbf{x} \mid \textbf{x} \geq \textbf{0}\}$ ikke uendelige linjer og da polyeder på standardform befinder sig i den positive kvadrant, indeholder disse heller ikke uendelige linjer.
 %
 \begin{kor}{}{}
