--- a/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
+++ b/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
@@ -3,19 +3,19 @@ Disse er \textit{hyperplan}, \textit{halvrum} og \textit{polyeder}.
 %
 \begin{defn}{}{Polyede}
 Lad $A$ være en $m \times n$ matrix, og lad $\mathbf{b}$ være en vektor i  $\R^m$.
-En \textbf{polyede} $\mathcal{P}$ er en mængde, der kan beskrives som 
+Et \textbf{polyeder} $\mathcal{P}$ er en mængde, der kan beskrives som 
 $\mathcal{P} = \{x\in \R^n \mid A\mathbf{x}\geq b\}.$
 %
 \end{defn}
 \noindent
 %
-Som det fremgår af definition \ref{defn:Polyede}, er en polyede mængden af mulige løsninger $\mathbf{x}$ af et ligningssystem, hvilket også kaldes værdimængden.
-Det gælder endvidere, at en mængde af formen $\mathcal{P} \{x \in \R^n \text{ } \mid \text{ } A\textbf{x} = b,x \geq 0 \}$ kaldes en \textit{polyede på standardform}, hvilket vil blive beskrevet yderligere i afsnit \ref{afsnit:fisk}.
+Som det fremgår af definition \ref{defn:Polyede}, er et polyeder mængden af mulige løsninger $\mathbf{x}$ af et ligningssystem, hvilket også kaldes værdimængden.
+Det gælder endvidere, at en mængde af formen $\mathcal{P} \{x \in \R^n \text{ } \mid \text{ } A\textbf{x} = b,x \geq 0 \}$ kaldes et \textit{polyeder på standardform}, hvilket beskrives yderligere i afsnit \ref{afsnit:fisk}.
 %
 %
 Betragt \ref{eks:min_lin}.
-Her er det blå område på figur \ref{fig:min_beg} en polyede. 
-Ligeledes ses på figur \ref{fig:nej2} en polyede $\mathcal{P}$, der er markeret med blå i $\R^2$, og på figur \ref{fig:nej3} ses en polyede $\mathcal{P}$, markeret med blå i $\R^3$. 
+Her er det blå område på figur \ref{fig:min_beg} et polyeder. 
+Ligeledes ses på figur \ref{fig:nej2} et polyeder $\mathcal{P}$, der er markeret med blå i $\R^2$, og på figur \ref{fig:nej3} ses et polyeder $\mathcal{P}$, markeret med blå i $\R^3$. 
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Flot graf alla Julie     %%%
@@ -30,12 +30,12 @@ $
 $
 \end{center}
 %
-\textit{Polygonet} er begrænsningerne, som afgrænser polyeden fra resten af rummet. 
+\textit{Polygonet} er begrænsningerne, som afgrænser polyederet fra resten af rummet. 
 Dermed er polygonet på figur \ref{fig:nej2} linjerne, der afgrænser $\mathcal{P}$ fra resten af $\R^2$.
 Polygonet på figur \ref{fig:nej3} er derimod udsnittet af fladerne, som udgør kuben, der afgrænser $\mathcal{P}$ fra resten af $\R^3$.
 \\\\
 %
-Det gælder endvidere for polyeder, at de enten kan være \textit{begrænsede} eller \textit{ubegrænsede}.
+Det gælder endvidere for polyedre, at de enten kan være \textit{begrænsede} eller \textit{ubegrænsede}.
 %
 \begin{defn}{}{}
 En mængde $S \subset \R^n$ er \textbf{begrænset}, såfremt der eksister en konstant $c$, således den absolutte værdi af alle komponenter i alle elementer i $S$ er $\leq c$. 
@@ -47,7 +47,7 @@ Såfremt en sådan konstant ikke eksisterer, er mængden \textbf{ubegrænset}.
 %alternativt værdien af ..... $\leq k$ eller $\geq$
 %
 I henhold til lineære programmeringsproblemer vil dette ofte være begrænset.
-Endvidere er det en fordel at definere polyeder, der er begrænset af én lineær betingelse. 
+Endvidere er det en fordel at definere polyedre, der er begrænset af én lineær betingelse. 
 %
 \begin{defn}{}{}
 Lad $\mathbf{a}$ være en vektor i $\R^n$, hvor $\mathbf{a} \neq \mathbf{0}$ og lad $b$ være en skalar.
@@ -67,9 +67,9 @@ Der vil dermed være et halvrum på hver side af hyperplanet, hvilket er illustr
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \input{fig/tikz/geometri/hyperplan_r2}
 %
-Betragt polyeden $\mathcal{P}$ på figur \ref{fig:nej2}. 
+Betragt polyederet $\mathcal{P}$ på figur \ref{fig:nej2}. 
 Polygonen består af fire hyperplaner. 
-Fællesmængden for de øvre halvrum udgør polyeden.
+Fællesmængden for de øvre halvrum udgør polyederet.
 På figur \ref{fig:nej5} er de fire hyperplaner markeret. 
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -116,7 +116,7 @@ For hyperplanet
 $\{x \in \R^n \mid \mathbf{a}^T \mathbf{x}=b\},$ 
 vil $\mathbf{a}$ være ortogonal med hyperplanet.
 \end{thm}
-% 
+%Ovenstående giver stadig ikke mening? 
 \begin{proof}
 Lad $\mathbf{x}$ og $\mathbf{y}$ tilhøre det samme hyperplan. 
 Så er $\mathbf{a}^Tx=\mathbf{a}^Ty.$
