--- a/incl/main/indledning/indledning.tex
+++ b/incl/main/indledning/indledning.tex
@@ -6,28 +6,45 @@
 %   Kapitel 1: bla bla 
 %   Kapitel 2: bla bla 
 %   m.m.
-Optimeringsproblemer er en fundamental del af matematikken, og i den anvendte matematik udgøre disse en vægtig del af matematikkeres virke.
-I denne rapport vil lineære optimeringsproblemer undersøges. 
-Dele af forskningsfeltet betragter disse som havende ophav ved Danzig og dennes udarbejdelse af simplexmetoden \citep[side 107]{refa} i 1947.
-Der er dog tilstadighed diskussion om, hvor lineære programmeringsproblemer som matematisk felt stammer fra og andre peger på Sovjetunionen og behovet for at optimere produktionen i en planøkonomisk kontekst som ophav \citep[side 155]{refb}.
-Forudsætningen for, at Danzig arbejdede med lineære programmeringsproblemer var hans ansættelse ved Royal Airforce \citep[side 107]{refa} og en applikation blev i forbindelse med den vestligt kontrollerede sektor af Berlin.
-Vestberlin lå dybt inde i den sovjetisk kontrollerede sektor af Tyskland og som følge af spændingerne mellem Vesteuropa og Sovjet besluttede Josef Stalin at lukke for forsyninger via jorden til Berlin.
-Det blev derfor nødvendigt for vestmagterne at etablere en luftbro til Berlin, der gjorde det muligt, trods de sovjetiske restriktioner, at indføre basale fornødenheder til de $2,5$ millioner mennesker der levede i byen.
-Da en sådan måde at indføre vare på er ressourceintensiv, blev der derfor behov for at gøre dette mest effektivt underlagt de logistiske restriktioner.
-Det er derfor et matematisk felt, som i sin brug er nært bundet op på praktiske problemstillinger dette værende økonomiske og logistiske.
-Det er derfor også et felt, der har været nært knyttet op til militære problemstillinger som Danzigs ansættelsesforhold også antyder.
-Danzigs bidrag til forskningsfeltet, altså simplexmetoden, er dog stadigt en fundamental del af hvordan løsningen af lineære programmeringsproblemer behandles i dag.
+I denne rapport afdækkes lineær optimering, som også kaldes lineær programmering, med fokus på simplex-metoden.
+Optimeringsproblemer er en fundamental del af matematikken, og i den anvendte matematik udgør disse en vægtig del af matematikeres virke. 
+Dele af forskningsfeltet betragter George Bernard Dantzig som værende  ophavsmand til behandlingen af optimeringsproblemer, som de betragtes i dag, samt til udarbejdelsen af simplex-metoden \citep[side 107]{refa} i 1947.
+%Ved ikke helt med det "fundamental", kan ikke lige finde på noget andet til gengæld... 
+%Simplex-metoden eller simplexmetoden? 
+Der er dog til stadighed diskussion om, hvor lineære programmeringsproblemer som matematisk felt stammer fra, da andre peger på Sovjetunionen og behovet for at optimere produktionen i en planøkonomisk kontekst som ophav \citep[side 155]{refb}.
+Forudsætningen for at Dantzig arbejdede med lineære programmeringsproblemer, var hans ansættelse ved Royal Airforce \citep[side 107]{refa}, samt en applikation blev i forbindelse med den vestligt kontrollerede sektor af Berlin.
+%Hvad betyder ovenstående? :-) 
+Vestberlin lå i Dantzigs samtid dybt inde i den sovjetisk kontrollerede sektor af Tyskland. 
+Som følge af spændingerne mellem Vesteuropa og Sovjetunionen besluttede Josef Stalin at lukke for forsyninger via land til Berlin.
+Det blev derfor nødvendigt for vestmagterne at etablere en luftbro til Berlin, der gjorde det muligt, trods de sovjetiske restriktioner, at indføre basale fornødenheder til de $2,5$ millioner mennesker, som levede i byen.
+Da en sådan måde at indføre varer på er ressourceintensiv, opstod derfor et behov for at gøre dette mest effektivt, underlagt de logistiske restriktioner.
+Det er derfor et matematisk felt, som i sin brug er nært bundet op på praktiske problemstillinger; dette værende økonomiske og logistiske.
+Det er ligeledes et felt, der har været nært knyttet op til militære problemstillinger, som Dantzigs ansættelsesforhold også antyder.
+Dantzigs bidrag til forskningsfeltet i form af simplex-metoden er dog stadig en fundamental del af løsning af lineære programmeringsproblemer i dag.
 \\\\
-Projektets primære arbejdsområde vil derfor omhandle simplexmetoden samt den geometriske fremstilling af lineære programmeringsproblemer.
-Det skal dog nævnes, at der ligeledes findes optimeringsproblemer, som ikke kan beskrives igennem lineære sammenhænge, en afgrænsning bliver her at disse ikke vil beskrives i dette indeværende projekt.
-Problemformuleringen bliver derfor som følger:
+Projektets primære arbejdsområde vil derfor omhandle simplexmetoden, samt den geometriske fremstilling af lineære programmeringsproblemer.
+Det skal dog nævnes, at der ligeledes findes optimeringsproblemer, som ikke kan beskrives igennem lineære sammenhænge. 
+Dog er indholdet af denne rapport afgrænset til at afdække løsning af lineære optimeringsproblemer.
+Problemformuleringen, der ligger til grundlag for udarbejdelsen af rapporten, er: 
 \begin{col}{}{}
-Hvordan kan lineære programmeringsproblemer anskues geometrisk og hvordan kan disse løses ved hjælp af simplexmetoden?
+Hvordan kan lineære programmeringsproblemer anskues geometrisk, og hvordan kan disse løses ved hjælp af simplexmetoden?
 \end{col}
-Med henblik på at besvare denne vil følgende emneområder bliver inddraget:
-\begin{itemize}
-\item En introduktion til lineær algebra: Afsnittet har til hensigt at indføre passende notation, samt introducere væsentlige metoder og begreber til løsning af lineære programmeringsproblemer.
-\item Lineære programmeringsproblemer: Projektets primære emneområde. Det vil her introduceres hvordan disse fremstilles matematiske samt interessante egenskaber herved.
-\item Geometrisk fremstilling: her skal der stå et eller andet når vi ved hvad der er med.
-\item Simplexmetoden: Beskrivelse og bevis af Simplexmetoden som løsningsalgoritme.
+Nedenstående er en oversigt over indholdet af nærværende rapport. 
+\begin{itemize}[itemindent=4.6em]
+\item[\textbf{Kapitel 1:}] Er en introduktion til lineær algebra.
+Afsnittet har til hensigt at indføre passende notation til anvendelse af matricer og vektorer, samt introducere væsentlige metoder og begreber til løsning af lineære ligningssystemer. 
+Desuden belyses nogle essentielle egenskaber ved lineære ligningssystemer. 
+\item[\textbf{Kapitel 2:}] Belyser lineære programmeringsproblemer og introducerer tilgange til løsning af disse, hvilket er projektets primære emneområde. 
+Endvidere introduceres i dette kapitel, hvordan lineære programmeringsproblemer fremstilles matematisk, samt nogle interessante egenskaber ved dem.
+\item[\textbf{Kapitel 3:}] Afdækker, hvad en grafisk løsning af lineære programmeringsproblemer indebærer. 
+Geometrisk fremstilling introduceres. 
+Begreber og sætninger, der er nødvendige for simplexmetoden, forefindes ligeledes i dette kapitel. 
+\item[\textbf{Kapitel 4:}] Er en undersøgelse og anvendelse af simplexmetoden. 
+Kapitlet indeholder desuden en beskrivelse af samt bevis for simplexmetoden som løsningsalgoritme.
+\item[\textbf{Kapitel 5:}] Dualitet? LU-dekomposition? Nej? Jo? Ja? Måske? 
 \end{itemize}
+%
+Foruden ovennævnte kapitler findes $???$ bilag slutteligt i denne rapport.
+%Har vi bilag eller ej? 
+Kilder til indholdet af de enkelte afsnit angives i starten af hvert afsnit. 
+Alt i afsnittet er således fra disse kilder, medmindre andet er angivet. 
