--- a/incl/main/grafisk_losning/eksistens.tex
+++ b/incl/main/grafisk_losning/eksistens.tex
@@ -28,7 +28,7 @@ Hvis dette ikke er tilfældet, ligger alle vektorerne $\textbf{a}_i, i \in I$, i
 Betragt linjen bestående af alle punkter på formen $\textbf{y} = \textbf{x} + \lambda \textbf{d}$, hvor $\lambda$ er en vilkårlig skalar.
 For $i \in I$ haves, at $\textbf{a}_i^T\textbf{y} = \textbf{a}_i^T\textbf{x} + \lambda \textbf{a}_i^T\textbf{d} = \textbf{a}_i^T\textbf{x} = b_i$.
 De betingelser, der er bindende i $\textbf{x}$, er således også bindende i alle punkter på linjen.
-Antages det, at $\mathcal{P}$ ikke indeholder en uendelig linje, må der eksistre et $\lambda$, hvor en af betingelserne ikke længere er opfyldt.
+Antages det, at $\mathcal{P}$ ikke indeholder en uendelig linje, så må der eksistere et $\lambda$, hvor en af betingelserne ikke længere er opfyldt.
 I punktet, hvor betingelsen er ved at blive brudt, må en ny betingelse blive bindende.
 Derfor må der eksistere et $\lambda_j$ og et $j \notin I$, således at $\textbf{a}_j^T (\textbf{x} + \lambda_j\textbf{d}) = b_j$.\\\\
 %
