Update simplex_metoden.tex, simplex_metoden_intro.tex, and 2 more files...

--- a/incl/main/simplex_metoden/simplex_metoden.tex
+++ b/incl/main/simplex_metoden/simplex_metoden.tex
@@ -6,6 +6,17 @@
 	\input{incl/main/simplex_metoden/simplex_metoden_intro}
 %
 %
+%
+% Typer af simplex-metoden
+% ---------------------------------------------------------
+	\input{incl/main/simplex_metoden/undgå_pivoteringslokke}
+%
+%
+% Typer af simplex-metoden
+% ---------------------------------------------------------
+	\input{incl/main/simplex_metoden/simplex_metoden_typer}
+%
+%
 % Pivoterings-løkker
 % ---------------------------------------------------------
 	\input{incl/main/simplex_metoden/pivoterings_lokke}
