--- a/incl/main/simplex_metoden/simplex_metoden_intro.tex
+++ b/incl/main/simplex_metoden/simplex_metoden_intro.tex
@@ -30,7 +30,8 @@ Som nævnt tidligere i rapporten, så findes der en optimal løsning til et line
 % -------------------------------------------------------------------------
 % Noget introducerende
 %
-Simplex-metoden tager udgangspunkt i følgende steps: 
+\section{Simplex-metoden på praktisk problem}
+Simplex-metoden tager overordnet udgangspunkt i følgende steps: 
 %
 \begin{col}{}{}
 %
